@@ -9,7 +9,8 @@ public partial class RenucationMod
 {
 	internal enum MessageType : byte
 	{
-		RenucationPlayerSyncPlayer
+		RenucationPlayerSyncPlayer = 0,
+		RenucationZarnitsaSyncPlayer = 1,
 	}
 
 	public override void HandlePacket(BinaryReader reader, int whoAmI)
@@ -22,6 +23,16 @@ public partial class RenucationMod
 				ushort playernumber = reader.ReadUInt16();
 				ExperimentalHeartPlayer renucationPlayer = Main.player[playernumber].GetModPlayer<ExperimentalHeartPlayer>();
 				renucationPlayer.usedExperimentalHeart = reader.ReadInt32();
+				break;
+			case MessageType.RenucationZarnitsaSyncPlayer:
+				ushort who = reader.ReadUInt16();
+				ZarnitsaPlayer zarnitsaPlayer = Main.player[who].GetModPlayer<ZarnitsaPlayer>();
+
+				if (reader.ReadBoolean())
+					zarnitsaPlayer.EnableZarnitsa();
+				else
+					zarnitsaPlayer.DisableZarnitsa();
+
 				break;
 			default:
 				Logger.WarnFormat("Renucation: Unknown Message type: {0}", msgType);
