@@ -6,6 +6,7 @@
 - Added Meteor generator (required enable INDEV generation)
 - Added Suspicious Looking Flower
 - Added Experemental Heart
+- Added Zarnitsa
 - New logo
 
 
